# grade-scores

./: CMakeLists.txt  README.md
application/grade-scores/: CMakeLists.txt  main.cpp
test/application/grade-scores/: CMakeLists.txt  scores-graded.txt  scores.txt
